# mesh

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/: Makefile  conf.py  glossary.md  index.md  roadmap.md
docs/api/: fit.md  index.md  kernels.md  model.md  plots.md  schema.md  simulate.md  summaries.md
docs/biology/: index.md  sampling-design.md  spatial-scales.md
docs/cases/: co-segregation.md  functional-patch.md  index.md  strain-territory.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: choose-your-model.md  index.md  prepare-your-data.md  read-your-results.md  run-your-first-fit.md
docs/methods/: coregionalization_hierarchy.md  index.md  inference.md  model.md  schema.md  simulation.md
examples/: m0_spatial_field.py  plot_architecture.py  plot_cases.py  plot_negbinomial.py  run_anisotropic.py  run_negbinomial.py
src/mesh/: __init__.py  fit.py  kernels.py  model.py  plots.py  schema.py  simulate.py  summaries.py
tests/: test_anisotropy.py  test_compose.py  test_coregionalization.py  test_hierarchical.py  test_plots.py  test_recovery.py  test_schema.py  test_smoothness.py
