[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesh"
version = "0.1.0"
description = "Metagenomic Ecology across Spatial Hierarchies: spatial-scale-explicit Bayesian inference for metagenomics"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Antton Alberdi", email = "antton.alberdi@sund.ku.dk" }]
keywords = ["metagenomics", "spatial", "gaussian-process", "bayesian", "numpyro"]
dependencies = [
    "numpy>=1.24",
    "jax>=0.4.20",
    "numpyro>=0.13",
    "arviz>=0.17",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mesh"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
